[DDW-541] Storybook stories for all steps

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -622,8 +622,7 @@
   "voting.votingRegistration.confirm.step.description": "To ensure your registration is confirmed, you will need to wait 1 hour before proceeding.",
   "voting.votingRegistration.confirm.step.descriptionRestart": "Please restart the registration process by clicking the Restart Registration button.",
   "voting.votingRegistration.confirm.step.errorMessage": "Registration transaction was not registered correctly.",
-  "voting.votingRegistration.confirm.step.importantInformation1": "If you close this window, or the wallet, you will need to start the registration process again and resubmit your registration transaction.",
-  "voting.votingRegistration.confirm.step.importantInformation2": "In 99.99% of cases the 1 hour wait time should suffice, however if you want a 100% guarantee to ensure successful registration we recommend waiting for 18 hours before confirming.",
+  "voting.votingRegistration.confirm.step.message1": "If you close this window, or the wallet, you will need to start the registration process again and resubmit your registration transaction.",
   "voting.votingRegistration.confirm.step.restartButtonLabel": "Restart Registration",
   "voting.votingRegistration.dialog.dialogTitle": "Register to vote",
   "voting.votingRegistration.dialog.subtitle": "Step {step} of {stepCount}",
