[DDW-548]: Update receovery phrase input placeholder

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -762,6 +762,7 @@
   "wallet.restore.dialog.restore.wallet.button.label": "Restore wallet",
   "wallet.restore.dialog.shielded.recovery.phrase.input.hint": "Enter your {numberOfWords}-word paper wallet recovery phrase",
   "wallet.restore.dialog.shielded.recovery.phrase.input.label": "27-word paper wallet recovery phrase",
+  "wallet.restore.dialog.shielded.recovery.phrase.input.placeholder": "Enter word #{wordNumber}",
   "wallet.restore.dialog.spendingPasswordLabel": "Enter password",
   "wallet.restore.dialog.step.configuration.continueButtonLabel": "Continue",
   "wallet.restore.dialog.step.configuration.description1": "Name your restored wallet and set a spending password to keep your wallet secure.",
@@ -775,7 +776,7 @@
   "wallet.restore.dialog.step.mnemonics.autocomplete.invalidRecoveryPhrase": "Invalid recovery phrase",
   "wallet.restore.dialog.step.mnemonics.autocomplete.multiLengthPhrase.placeholder": "Enter your 12, 18 or 24-word recovery phrase",
   "wallet.restore.dialog.step.mnemonics.autocomplete.noResults": "No results",
-  "wallet.restore.dialog.step.mnemonics.autocomplete.placeholder": "Enter your {numberOfWords}-word recovery phrase",
+  "wallet.restore.dialog.step.mnemonics.autocomplete.placeholder": "Enter word #{wordNumber}",
   "wallet.restore.dialog.step.success.dialog.close": "Close",
   "wallet.restore.dialog.step.success.dialog.description.line1": "Your wallet has been successfully restored.",
   "wallet.restore.dialog.step.success.dialog.description.line2": "Restored wallets should have all the funds and transaction history of the original wallet. <strong>If your restored wallet does not have the funds and transaction history you were expecting</strong>, please check that you have the correct wallet recovery phrase for the wallet you were intending to restore.",
