--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -762,6 +762,7 @@
   "wallet.restore.dialog.restore.wallet.button.label": "ウォレットを復元する",
   "wallet.restore.dialog.shielded.recovery.phrase.input.hint": "{numberOfWords}語のペーパーウォレット復元フレーズを入力してください。",
   "wallet.restore.dialog.shielded.recovery.phrase.input.label": "27語のペーパーウォレット復元フレーズ",
+  "wallet.restore.dialog.shielded.recovery.phrase.input.placeholder": "{wordNumber}番目の単語を入力",
   "wallet.restore.dialog.spendingPasswordLabel": "パスワードを入力してください",
   "wallet.restore.dialog.step.configuration.continueButtonLabel": "続ける",
   "wallet.restore.dialog.step.configuration.description1": "復元したウォレットに名前を付け、ウォレットを安全に保つために送信時パスワードを設定してください。",
@@ -775,7 +776,7 @@
   "wallet.restore.dialog.step.mnemonics.autocomplete.invalidRecoveryPhrase": "無効な復元フレーズ",
   "wallet.restore.dialog.step.mnemonics.autocomplete.multiLengthPhrase.placeholder": "12語、18語、または24語のウォレット復元フレーズを入力してください",
   "wallet.restore.dialog.step.mnemonics.autocomplete.noResults": "該当するフレーズは見つかりませんでした",
-  "wallet.restore.dialog.step.mnemonics.autocomplete.placeholder": "{numberOfWords}語のウォレット復元フレーズを入力してください",
+  "wallet.restore.dialog.step.mnemonics.autocomplete.placeholder": "{wordNumber}番目の単語を入力",
   "wallet.restore.dialog.step.success.dialog.close": "閉じる",
   "wallet.restore.dialog.step.success.dialog.description.line1": "ウォレットは無事に復元されました。",
   "wallet.restore.dialog.step.success.dialog.description.line2": "復元されたウォレットにはオリジナルウォレットの資金およびトランザクション履歴がすべて含まれているはずです。<strong>復元されたウォレットに期待していた資金やトランザクション履歴が入っていない場合には</strong>, 復元対象となるウォレットの正しい復元フレーズを使用しているか確認してください。",
