[DDW-541] Voting info

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -602,12 +602,16 @@
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
   "voting.info.androidAppButtonUrl": "https://play.google.com/store/apps/details?id=io.iohk.vitvoting&hl=es_419&gl=US",
-  "voting.info.buttonLabel": "I confirm all steps have been completed. Continue with registration.",
-  "voting.info.description": "Before you begin, you must first complete the steps below:",
-  "voting.info.heading": "Register to vote",
-  "voting.info.stepTitle1": "Download the Catalyst Voting App",
-  "voting.info.stepTitle2": "Open the Catalyst Voting App and click on the complete registration button.",
-  "voting.info.stepTitle3": "Ensure you have 5 minutes to complete the registration process, and an additional hour to receive a final confirmation.",
+  "voting.info.appleAppButtonUrl": "https://apps.apple.com/in/app/catalyst-voting/id1517473397",
+  "voting.info.bottomContentDescription": "To register to vote for Catalyst Fund3 you first need to download the <b>Catalyst Voting</b> app on your Android or iOS smartphone.",
+  "voting.info.bottomContentTitle": "Download Catalyst Voting app on your smartphone",
+  "voting.info.buttonLabel": "Register for Fund3 voting",
+  "voting.info.checkboxLabel": "I have the app installed",
+  "voting.info.heading": "Register to vote on Fund3",
+  "voting.info.learnMoreLinkLabel": "Learn more",
+  "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
+  "voting.info.stepTitle1": "Decide how to allocate $200K for innovative ideas to improve Cardano.",
+  "voting.info.stepTitle2": "$70,000 worth of ada rewards will be distributed between all who register.",
   "voting.unavailable.description": "Before registering for voting, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and it is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to register with Fund3. Please wait for this process to complete before returning here.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
   "voting.votingRegistration.chooseWallet.step.description": "For <span>Fund3</span> voting you will only be able to use one wallet to register.",
