[DDW-541] Flow and Lint issues

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -602,12 +602,16 @@
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
   "voting.info.androidAppButtonUrl": "https://play.google.com/store/apps/details?id=io.iohk.vitvoting&hl=es_419&gl=US",
+  "voting.info.appleAppButtonUrl": "!!!https://apps.apple.com/in/app/catalyst-voting/id1517473397",
+  "voting.info.bottomContentDescription": "!!!To register to vote for Catalyst Fund3 you first need to download the <p>Catalyst Voting</p> app on your Android or iOS smartphone.",
+  "voting.info.bottomContentTitle": "!!!Download Catalyst Voting app on your smartphone",
   "voting.info.buttonLabel": "投票の登録をする",
-  "voting.info.description": "始める前に、必ず以下のステップを完了してください",
+  "voting.info.checkboxLabel": "!!!\"I have the app installed\"",
   "voting.info.heading": "投票の登録をする",
+  "voting.info.learnMoreLinkLabel": "!!!Learn more",
+  "voting.info.learnMoreLinkUrl": "!!!https://cardano.ideascale.com/a/index",
   "voting.info.stepTitle1": "Catalyst Votingアプリをダウンロードします",
   "voting.info.stepTitle2": "Catalyst Votingアプリを開き[登録を完了する]ボタンをクリックします",
-  "voting.info.stepTitle3": "登録プロセスにかかる5分、さらに最終確認を受信するまでにかかる1時間の所要時間を確保してください",
   "voting.unavailable.description": "!!!Before registering for voting, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and it is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to register with Fund3. Please wait for this process to complete before returning here.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "続ける",
   "voting.votingRegistration.chooseWallet.step.description": "<span>Fund3</span>の投票用として、登録に使用できるウォレットは1つだけです。",
@@ -622,6 +626,7 @@
   "voting.votingRegistration.confirm.step.description": "登録が確認されるまで次の段階に進む前に1時間お待ちください。",
   "voting.votingRegistration.confirm.step.descriptionRestart": "[登録をやり直す]ボタンをクリックして、登録プロセスをやり直してください。",
   "voting.votingRegistration.confirm.step.errorMessage": "登録トランザクションは正しく登録されませんでした。",
+  "voting.votingRegistration.confirm.step.message1": "!!!Approximately 5 minutes of waiting is required for your voting registration to be confirmed. Please leave Daedalus running.",
   "voting.votingRegistration.confirm.step.restartButtonLabel": "登録をやり直す",
   "voting.votingRegistration.dialog.dialogTitle": "投票の登録をする",
   "voting.votingRegistration.dialog.subtitle": "ステップ{step}/{stepCount}",
