[DDW-541] Updates UI

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -606,56 +606,62 @@
   "voting.info.bottomContentDescription": "!!!To register to vote for Catalyst Fund3 you first need to download the <p>Catalyst Voting</p> app on your Android or iOS smartphone.",
   "voting.info.bottomContentTitle": "!!!Download Catalyst Voting app on your smartphone",
   "voting.info.buttonLabel": "投票の登録をする",
-  "voting.info.checkboxLabel": "!!!\"I have the app installed\"",
+  "voting.info.checkboxLabel": "!!!I have installed the Catalyst Voting app",
   "voting.info.heading": "投票の登録をする",
   "voting.info.learnMoreLinkLabel": "!!!Learn more",
   "voting.info.learnMoreLinkUrl": "!!!https://cardano.ideascale.com/a/index",
   "voting.info.stepTitle1": "Catalyst Votingアプリをダウンロードします",
   "voting.info.stepTitle2": "Catalyst Votingアプリを開き[登録を完了する]ボタンをクリックします",
-  "voting.unavailable.description": "!!!Before registering for voting, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and it is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to register with Fund3. Please wait for this process to complete before returning here.",
+  "voting.unavailable.description": "Daedalusは現在Cardanoブロックチェーンと同期中であり、<b>{syncPercentage}%</b>完了しています。この機能はDaedalusが完全に同期すると有効になります。",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "続ける",
-  "voting.votingRegistration.chooseWallet.step.description": "<span>Fund3</span>の投票用として、登録に使用できるウォレットは1つだけです。",
+  "voting.votingRegistration.chooseWallet.step.description": "!!!You can only use one wallet when registering.<br>To maximize rewards and voting power, choose your largest wallet.",
   "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "!!!This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
   "voting.votingRegistration.chooseWallet.step.errorLegacyWallet": "!!!This wallet cannot be registered for voting because it is a legacy Byron wallet.",
-  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingRegistrationFunds} ADAが入っていません。<span>最低額の{minVotingRegistrationFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "!!!This wallet does not contain the minimum required amount of <span>{minVotingRegistrationFunds} ADA</span>. Please select a different wallet with <span>a minimum balance of {minVotingRegistrationFunds} ADA</span>.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであり、投票用には使用できません。",
   "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "このウォレットはブロックチェーンと同期中のため、投票用に使用することはできません。",
-  "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "ウォレットを選択する",
-  "voting.votingRegistration.chooseWallet.step.selectWalletInputPlaceholder": "ウォレットを選択する",
-  "voting.votingRegistration.confirm.step.continueButtonLabel": "登録トランザクションを確認する",
-  "voting.votingRegistration.confirm.step.description": "登録が確認されるまで次の段階に進む前に1時間お待ちください。",
-  "voting.votingRegistration.confirm.step.descriptionRestart": "[登録をやり直す]ボタンをクリックして、登録プロセスをやり直してください。",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "!!!Select a wallet",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputPlaceholder": "!!!Select a wallet",
+  "voting.votingRegistration.confirm.step.confirmationsCountLabel": "!!!{currentCount} of {expectedCount}",
+  "voting.votingRegistration.confirm.step.continueButtonLabel": "!!!Continue",
+  "voting.votingRegistration.confirm.step.description": "!!!Approximately 5 minutes of waiting is required for your voting registration to be confirmed. Please leave Daedalus running.",
+  "voting.votingRegistration.confirm.step.descriptionRestart": "!!!Please restart the registration process by clicking the <span>Restart registration</span> button.",
   "voting.votingRegistration.confirm.step.errorMessage": "登録トランザクションは正しく登録されませんでした。",
-  "voting.votingRegistration.confirm.step.message1": "!!!Approximately 5 minutes of waiting is required for your voting registration to be confirmed. Please leave Daedalus running.",
-  "voting.votingRegistration.confirm.step.restartButtonLabel": "登録をやり直す",
-  "voting.votingRegistration.dialog.dialogTitle": "投票の登録をする",
+  "voting.votingRegistration.confirm.step.restartButtonLabel": "!!!Restart registration",
+  "voting.votingRegistration.confirm.step.transactionPendingLabel": "!!!Transaction pending...",
+  "voting.votingRegistration.confirm.step.waitingForConfirmationsLabel": "!!!Waiting for confirmations...",
+  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabel": "!!!Close window",
+  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabelVariation": "!!!Close Daedalus",
+  "voting.votingRegistration.dialog.confirmation.button.confirmButtonLabel": "!!!Continue registration",
+  "voting.votingRegistration.dialog.confirmation.content": "!!!Are you sure that you want to abort Fund3 voting registration? The transaction fee you paid for the voting registration will go to waste and you will need to start the registration from the beginning if you decide to register for Fund3 voting.",
+  "voting.votingRegistration.dialog.confirmation.headline": "!!!Abort Fund3 Voting Registration?",
+  "voting.votingRegistration.dialog.dialogTitle": "!!!Register for Fund3 voting",
   "voting.votingRegistration.dialog.subtitle": "ステップ{step}/{stepCount}",
-  "voting.votingRegistration.enterPinCode.step.continueButtonLabel": "PINコードを作成する",
-  "voting.votingRegistration.enterPinCode.step.description": "投票用のPINコードを作成してください。このコードはCatalyst VotingアプリへのアクセスとQRコードの解読に使用されます。",
-  "voting.votingRegistration.enterPinCode.step.enterPinCodeLabel": "PINコードを入力してください",
+  "voting.votingRegistration.enterPinCode.step.continueButtonLabel": "!!!Continue",
+  "voting.votingRegistration.enterPinCode.step.description": "!!!Please enter a PIN code for your Fund3 voting registration. The PIN you set here and the QR code which you will get in the next step will be required for you to vote using the Catalyst Voting app on your smartphone.",
+  "voting.votingRegistration.enterPinCode.step.enterPinCodeLabel": "!!!Enter the PIN",
   "voting.votingRegistration.enterPinCode.step.errors.invalidPinCode": "!!!Invalid pin code",
   "voting.votingRegistration.enterPinCode.step.errors.invalidRepeatPinCode": "PINコードが一致しません",
-  "voting.votingRegistration.enterPinCode.step.reminder": "PINコードはなくさないように注意してください。PINコードをなくすと、登録プロセスを続けることができなくなります",
-  "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "PINコードを再入力してください",
-  "voting.votingRegistration.enterPinCode.step.subtitle": "登録トランザクションが確認されました",
-  "voting.votingRegistration.enterPinCode.step.title": "おめでとうございます",
-  "voting.votingRegistration.qrCode.step.message": "このQRコードはどこにも保存されることなく、この画面を閉じるとアクセスできなくなります。",
-  "voting.votingRegistration.qrCode.step.qrCodeDescription": "Catalyst VotingアプリでQRコードをスキャンしてください",
-  "voting.votingRegistration.qrCode.step.qrCodeTitle": "登録を完了してください",
-  "voting.votingRegistration.qrCode.step.takeScreenShotMessage": "あとからアクセスする可能性がある場合は、QRコードのスクリーンショットを撮っておいてください",
-  "voting.votingRegistration.qrCode.step.warningMessage": "QRコードへのアクセスをなくした場合、新しいQRコードを生成するためには、登録を再び行う必要があります。",
-  "voting.votingRegistration.sign.step.calculatingFees": "手数料を計算しています",
-  "voting.votingRegistration.sign.step.continueButtonLabel": "登録トランザクションを送信する",
-  "voting.votingRegistration.sign.step.description": "この登録トランザクションを送信することによって、ステーキング残高の証明が作成されます。この証明に基づき、あなたの議決権が計算されます。手数料を除いて、ウォレットの残高が変更されることはありません。",
-  "voting.votingRegistration.sign.step.feesLabel": "手数料",
-  "voting.votingRegistration.sign.step.learnMoreLink": "このステップの詳細を見る",
-  "voting.votingRegistration.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
-  "voting.votingRegistration.sign.step.spendingPasswordLabel": "送信時パスワード",
-  "voting.votingRegistration.sign.step.spendingPasswordPlaceholder": "送信時パスワード",
+  "voting.votingRegistration.enterPinCode.step.reminder": "!!!<span>Please, don’t forget your PIN.</span> In case you forget your PIN you will not be able to use this registration for voting and you will need to go through the registration process again.",
+  "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "!!!Repeat the PIN",
+  "voting.votingRegistration.qrCode.step.checkbox1Label": "!!!I understand that I will not be able to get this QR code again after closing this window.",
+  "voting.votingRegistration.qrCode.step.checkbox2Label": "!!!I acknowledge that I need to have the downloaded PDF with the QR code to be able to vote with Fund3",
+  "voting.votingRegistration.qrCode.step.closeButtonLabel": "!!!Close",
+  "voting.votingRegistration.qrCode.step.qrCodeDescription": "!!!Open the Catalyst Voting app on your smartphone, scan the QR code and use the PIN to complete the voting registration.",
+  "voting.votingRegistration.qrCode.step.qrCodeTitle": "登録を完了してください。",
+  "voting.votingRegistration.qrCode.step.saveAsPdfButtonLabel": "!!!Save as PDF",
+  "voting.votingRegistration.register.step.calculatingFees": "手数料を計算しています",
+  "voting.votingRegistration.register.step.continueButtonLabel": "登録トランザクションを送信する",
+  "voting.votingRegistration.register.step.description": "!!!Please sign the voting registration transaction to link your wallet balance with your Fund3 voting registration as a proof of your voting power. No funds will leave your wallet but registering requires paying transaction fees displayed on the screen.",
+  "voting.votingRegistration.register.step.feesLabel": "手数料",
+  "voting.votingRegistration.register.step.learnMoreLink": "!!!Learn more",
+  "voting.votingRegistration.register.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
+  "voting.votingRegistration.register.step.spendingPasswordLabel": "送信時パスワード",
+  "voting.votingRegistration.register.step.spendingPasswordPlaceholder": "送信時パスワード",
   "voting.votingRegistration.steps.step.1.label": "ウォレット",
-  "voting.votingRegistration.steps.step.2.label": "署名",
+  "voting.votingRegistration.steps.step.2.label": "!!!Register",
   "voting.votingRegistration.steps.step.3.label": "確認",
-  "voting.votingRegistration.steps.step.4.label": "PINコード",
+  "voting.votingRegistration.steps.step.4.label": "PIN",
   "voting.votingRegistration.steps.step.5.label": "QRコード",
   "wallet.add.dialog.connect.description": "ハードウェアウォレットデバイスをペアリングする",
   "wallet.add.dialog.connect.label": "ペアリング",
