--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -606,56 +606,62 @@
   "voting.info.bottomContentDescription": "To register to vote for Catalyst Fund3 you first need to download the <b>Catalyst Voting</b> app on your Android or iOS smartphone.",
   "voting.info.bottomContentTitle": "Download Catalyst Voting app on your smartphone",
   "voting.info.buttonLabel": "Register for Fund3 voting",
-  "voting.info.checkboxLabel": "I have the app installed",
+  "voting.info.checkboxLabel": "I have installed the Catalyst Voting app",
   "voting.info.heading": "Register to vote on Fund3",
   "voting.info.learnMoreLinkLabel": "Learn more",
   "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
   "voting.info.stepTitle1": "Decide how to allocate $200K for innovative ideas to improve Cardano.",
   "voting.info.stepTitle2": "$70,000 worth of ada rewards will be distributed between all who register.",
-  "voting.unavailable.description": "Before registering for voting, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and it is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to register with Fund3. Please wait for this process to complete before returning here.",
+  "voting.unavailable.description": "Daedalus is synchronizing with the Cardano blockchain, and the process is currently <b>{syncPercentage}%</b> complete. This feature will become available once Daedalus is fully synchronized.",
   "voting.votingRegistration.chooseWallet.step.continueButtonLabel": "Continue",
-  "voting.votingRegistration.chooseWallet.step.description": "For <span>Fund3</span> voting you will only be able to use one wallet to register.",
+  "voting.votingRegistration.chooseWallet.step.description": "You can only use one wallet when registering.<br>To maximize rewards and voting power, choose your largest wallet.",
   "voting.votingRegistration.chooseWallet.step.errorHardwareWallet": "This wallet cannot be registered for voting because it is a hardware wallet. <span>Hardware wallets will be supported in the future.</span>",
   "voting.votingRegistration.chooseWallet.step.errorLegacyWallet": "This wallet cannot be registered for voting because it is a legacy Byron wallet.",
-  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingRegistrationFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingRegistrationFunds} ADA</span> and click Continue.",
+  "voting.votingRegistration.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum required amount of <span>{minVotingRegistrationFunds} ADA</span>. Please select a different wallet with <span>a minimum balance of {minVotingRegistrationFunds} ADA</span>.",
   "voting.votingRegistration.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains rewards balances only, and cannot be used for voting purposes.",
   "voting.votingRegistration.chooseWallet.step.errorRestoringWallet": "The wallet cannot be used for voting purposes while it is being synced with the blockchain.",
-  "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "Select wallet",
-  "voting.votingRegistration.chooseWallet.step.selectWalletInputPlaceholder": "Select Wallet",
-  "voting.votingRegistration.confirm.step.continueButtonLabel": "Confirm Registration Transaction",
-  "voting.votingRegistration.confirm.step.description": "To ensure your registration is confirmed, you will need to wait 1 hour before proceeding.",
-  "voting.votingRegistration.confirm.step.descriptionRestart": "Please restart the registration process by clicking the Restart Registration button.",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputLabel": "Select a wallet",
+  "voting.votingRegistration.chooseWallet.step.selectWalletInputPlaceholder": "Select a wallet",
+  "voting.votingRegistration.confirm.step.confirmationsCountLabel": "{currentCount} of {expectedCount}",
+  "voting.votingRegistration.confirm.step.continueButtonLabel": "Continue",
+  "voting.votingRegistration.confirm.step.description": "Approximately 5 minutes of waiting is required for your voting registration to be confirmed. Please leave Daedalus running.",
+  "voting.votingRegistration.confirm.step.descriptionRestart": "Please restart the registration process by clicking the <span>Restart registration</span> button.",
   "voting.votingRegistration.confirm.step.errorMessage": "Registration transaction was not registered correctly.",
-  "voting.votingRegistration.confirm.step.message1": "If you close this window, or the wallet, you will need to start the registration process again and resubmit your registration transaction.",
-  "voting.votingRegistration.confirm.step.restartButtonLabel": "Restart Registration",
-  "voting.votingRegistration.dialog.dialogTitle": "Register to vote",
+  "voting.votingRegistration.confirm.step.restartButtonLabel": "Restart registration",
+  "voting.votingRegistration.confirm.step.transactionPendingLabel": "Transaction pending...",
+  "voting.votingRegistration.confirm.step.waitingForConfirmationsLabel": "Waiting for confirmations...",
+  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabel": "Close window",
+  "voting.votingRegistration.dialog.confirmation.button.cancelButtonLabelVariation": "Close Daedalus",
+  "voting.votingRegistration.dialog.confirmation.button.confirmButtonLabel": "Continue registration",
+  "voting.votingRegistration.dialog.confirmation.content": "Are you sure that you want to abort Fund3 voting registration? The transaction fee you paid for the voting registration will go to waste and you will need to start the registration from the beginning if you decide to register for Fund3 voting.",
+  "voting.votingRegistration.dialog.confirmation.headline": "Abort Fund3 Voting Registration?",
+  "voting.votingRegistration.dialog.dialogTitle": "Register for Fund3 voting",
   "voting.votingRegistration.dialog.subtitle": "Step {step} of {stepCount}",
-  "voting.votingRegistration.enterPinCode.step.continueButtonLabel": "Create PIN code",
-  "voting.votingRegistration.enterPinCode.step.description": "Please create a voting PIN code. This code will be used to access the Catalyst Voting app and decrypt your QR code.",
-  "voting.votingRegistration.enterPinCode.step.enterPinCodeLabel": "Enter PIN code",
+  "voting.votingRegistration.enterPinCode.step.continueButtonLabel": "Continue",
+  "voting.votingRegistration.enterPinCode.step.description": "Please enter a PIN code for your Fund3 voting registration. The PIN you set here and the QR code which you will get in the next step will be required for you to vote using the Catalyst Voting app on your smartphone.",
+  "voting.votingRegistration.enterPinCode.step.enterPinCodeLabel": "Enter the PIN",
   "voting.votingRegistration.enterPinCode.step.errors.invalidPinCode": "Invalid pin code",
   "voting.votingRegistration.enterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
-  "voting.votingRegistration.enterPinCode.step.reminder": "<span>You need to remember your PIN Code.</span> If you lose it, you will not be able to proceed with the registration process.",
-  "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "Repeat PIN code",
-  "voting.votingRegistration.enterPinCode.step.subtitle": "Your registration transaction was confirmed.",
-  "voting.votingRegistration.enterPinCode.step.title": "Congratulations!",
-  "voting.votingRegistration.qrCode.step.message": "This QR code is not saved anywhere, and you will not have access to it after closing this screen.",
-  "voting.votingRegistration.qrCode.step.qrCodeDescription": "Scan the QR code using the Catalyst Voting app.",
-  "voting.votingRegistration.qrCode.step.qrCodeTitle": "Please complete your registration now",
-  "voting.votingRegistration.qrCode.step.takeScreenShotMessage": "Take a screenshot of the QR code if you want to access it later.",
-  "voting.votingRegistration.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again to generate a new QR code.",
-  "voting.votingRegistration.sign.step.calculatingFees": "Calculating fees",
-  "voting.votingRegistration.sign.step.continueButtonLabel": "Submit Registration Transaction",
-  "voting.votingRegistration.sign.step.description": "By submitting this registration transaction, you are creating a proof of your staking balance. This proof will be used to calculate your voting power. With the exception of fees, there will be no change to the balance of your wallet.",
-  "voting.votingRegistration.sign.step.feesLabel": "Fees",
-  "voting.votingRegistration.sign.step.learnMoreLink": "Learn more about this step in detail",
-  "voting.votingRegistration.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
-  "voting.votingRegistration.sign.step.spendingPasswordLabel": "Spending password",
-  "voting.votingRegistration.sign.step.spendingPasswordPlaceholder": "Spending password",
+  "voting.votingRegistration.enterPinCode.step.reminder": "<span>Please, don’t forget your PIN.</span> In case you forget your PIN you will not be able to use this registration for voting and you will need to go through the registration process again.",
+  "voting.votingRegistration.enterPinCode.step.repeatPinCodeLabel": "Repeat the PIN",
+  "voting.votingRegistration.qrCode.step.checkbox1Label": "I understand that I will not be able to get this QR code again after closing this window.",
+  "voting.votingRegistration.qrCode.step.checkbox2Label": "I acknowledge that I need to have the downloaded PDF with the QR code to be able to vote with Fund3",
+  "voting.votingRegistration.qrCode.step.closeButtonLabel": "Close",
+  "voting.votingRegistration.qrCode.step.qrCodeDescription": "Open the Catalyst Voting app on your smartphone, scan the QR code and use the PIN to complete the voting registration.",
+  "voting.votingRegistration.qrCode.step.qrCodeTitle": "Please complete your registration now.",
+  "voting.votingRegistration.qrCode.step.saveAsPdfButtonLabel": "Save as PDF",
+  "voting.votingRegistration.register.step.calculatingFees": "Calculating fees",
+  "voting.votingRegistration.register.step.continueButtonLabel": "Submit registration transaction",
+  "voting.votingRegistration.register.step.description": "Please sign the voting registration transaction to link your wallet balance with your Fund3 voting registration as a proof of your voting power. No funds will leave your wallet but registering requires paying transaction fees displayed on the screen.",
+  "voting.votingRegistration.register.step.feesLabel": "Fees",
+  "voting.votingRegistration.register.step.learnMoreLink": "Learn more",
+  "voting.votingRegistration.register.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
+  "voting.votingRegistration.register.step.spendingPasswordLabel": "Spending password",
+  "voting.votingRegistration.register.step.spendingPasswordPlaceholder": "Spending password",
   "voting.votingRegistration.steps.step.1.label": "Wallet",
-  "voting.votingRegistration.steps.step.2.label": "Sign",
+  "voting.votingRegistration.steps.step.2.label": "Register",
   "voting.votingRegistration.steps.step.3.label": "Confirm",
-  "voting.votingRegistration.steps.step.4.label": "PIN code",
+  "voting.votingRegistration.steps.step.4.label": "PIN",
   "voting.votingRegistration.steps.step.5.label": "QR code",
   "wallet.add.dialog.connect.description": "Pair a hardware wallet device",
   "wallet.add.dialog.connect.label": "Pair",
@@ -758,7 +764,7 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
+  "wallet.legacy.notification.descriptionWithFunds": "\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
   "wallet.navigation.more": "More",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
@@ -908,7 +914,7 @@
   "wallet.send.form.syncingTransactionsMessage": "The balance and transaction history of this wallet is being synced with the blockchain.",
   "wallet.send.form.title.hint": "E.g: Money for Frank",
   "wallet.send.form.title.label": "Title",
-  "wallet.settings.assurance": "!!!Transaction assurance security level",
+  "wallet.settings.assurance": "Transaction assurance security level",
   "wallet.settings.changePassword.dialog.currentPasswordFieldPlaceholder": "Type current password",
   "wallet.settings.changePassword.dialog.currentPasswordLabel": "Current password",
   "wallet.settings.changePassword.dialog.newPasswordFieldPlaceholder": "Type new password",
